tests/ui/parser/misspelled-keywords/impl-trait.rs
fn code<T: impll Debug>() -> u8 {}
//~^ ERROR expected one of

fn main() {}
